syntax = "proto3";
package CIS.InternalServices.TaskSchedulingService.v1;
option csharp_namespace = "CIS.InternalServices.TaskSchedulingService.Contracts.v1";

import "google/api/annotations.proto";
import "Messages/GetJobs.proto";
import "Messages/GetTriggers.proto";

service TaskSchedulingService {
	// Vrací seznam všech dostupných Jobů
	rpc GetJobs (GetJobsRequest) returns (GetJobsResponse) {
		option (google.api.http) = {
			get: "/api/v1/jobs"
		};
	}

	// Vrací seznam všech nastavených Triggerů
	rpc GetTriggers (GetTriggersRequest) returns (GetTriggersResponse) {
		option (google.api.http) = {
			get: "/api/v1/triggers"
		};
	}
}